--- a/Retrieval-Playground-Copy1.ipynb
+++ b/Retrieval-Playground-Copy1.ipynb
@@ -22,7 +22,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -58,10 +67,10 @@
     "class opt_config:\n",
     "    def __init__(self):\n",
     "        self.dataset = \"css3d\"\n",
-    "        self.dataset_path = \"../data/CSSDataset/CSS-vn-vanilla-v2.json\" \n",
-    "        self.model = \"tirg\" \n",
+    "        self.dataset_path = \"../data/CSSDataset/CSS-vn-v2-segmenter.json\" \n",
+    "        self.model = \"tirg_phobert\" \n",
     "        self.loss = \"soft_triplet\" \n",
-    "        self.comment = \"css3d_tirg\"\n",
+    "        self.comment = \"tirg_phobert\"\n",
     "        self.embed_dim = 512\n",
     "        self.learning_rate = 1e-2\n",
     "        self.weight_decay = 1e-6 \n",
@@ -71,13 +80,81 @@
     "        self.num_epochs = 100\n",
     "        self.n_epochs_valudations = 5\n",
     "        self.loader_num_workers = 4\n",
-    "        self.pretrained_weights = \"runs/Sep23_05-38-54_ai-servers-3css_vn_vanilla_v2/latest_checkpoint.pth\"\n",
+    "        self.pretrained_weights = \"runs/Dec12_14-57-59_ai-servers-1tirgphobert_css-vn-v2-segmenter/latest_checkpoint.pth\"\n",
     "        \n",
     "opt = opt_config()\n",
     "\n",
     "trainset, testset = load_dataset(opt)\n",
     "texts = [t for t in trainset.get_all_texts()]\n",
     "model = img_text_composition_models.TIRG(texts, embed_dim=opt.embed_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'source_img_id': 174,\n",
+       " 'source_img_data': tensor([[[-0.2856, -0.2856, -0.2856,  ..., -0.3541, -0.3541, -0.3712],\n",
+       "          [-0.2856, -0.2856, -0.2856,  ..., -0.3883, -0.3712, -0.3883],\n",
+       "          [-0.2856, -0.3027, -0.3027,  ..., -0.3883, -0.3883, -0.3883],\n",
+       "          ...,\n",
+       "          [ 0.0569,  0.0569,  0.0569,  ...,  0.2796,  0.2796,  0.2796],\n",
+       "          [ 0.0569,  0.0569,  0.0741,  ...,  0.2796,  0.2967,  0.2796],\n",
+       "          [ 0.0569,  0.0741,  0.0569,  ...,  0.2967,  0.2967,  0.2796]],\n",
+       " \n",
+       "         [[-0.1625, -0.1625, -0.1625,  ..., -0.2500, -0.2325, -0.2500],\n",
+       "          [-0.1625, -0.1625, -0.1800,  ..., -0.2675, -0.2500, -0.2675],\n",
+       "          [-0.1800, -0.1800, -0.1800,  ..., -0.2675, -0.2675, -0.2675],\n",
+       "          ...,\n",
+       "          [ 0.1702,  0.1702,  0.1702,  ...,  0.3803,  0.3803,  0.3803],\n",
+       "          [ 0.1702,  0.1702,  0.1877,  ...,  0.3803,  0.3978,  0.3803],\n",
+       "          [ 0.1702,  0.1877,  0.1702,  ...,  0.3978,  0.3978,  0.3803]],\n",
+       " \n",
+       "         [[ 0.0605,  0.0605,  0.0605,  ..., -0.0267, -0.0092, -0.0267],\n",
+       "          [ 0.0605,  0.0431,  0.0431,  ..., -0.0441, -0.0267, -0.0441],\n",
+       "          [ 0.0431,  0.0431,  0.0256,  ..., -0.0441, -0.0441, -0.0441],\n",
+       "          ...,\n",
+       "          [ 0.3568,  0.3742,  0.3568,  ...,  0.5485,  0.5485,  0.5485],\n",
+       "          [ 0.3568,  0.3568,  0.3742,  ...,  0.5485,  0.5834,  0.5485],\n",
+       "          [ 0.3568,  0.3742,  0.3568,  ...,  0.5659,  0.5659,  0.5485]]]),\n",
+       " 'target_img_id': 2769,\n",
+       " 'target_img_data': tensor([[[-0.3027, -0.2856, -0.3027,  ..., -0.3712, -0.3712, -0.3712],\n",
+       "          [-0.3027, -0.3198, -0.3027,  ..., -0.4054, -0.3883, -0.4054],\n",
+       "          [-0.3027, -0.3027, -0.3198,  ..., -0.3883, -0.3883, -0.3883],\n",
+       "          ...,\n",
+       "          [-0.0801, -0.0972, -0.0972,  ...,  0.3309,  0.3309,  0.3309],\n",
+       "          [-0.0972, -0.0972, -0.0801,  ...,  0.3309,  0.3481,  0.3481],\n",
+       "          [-0.0972, -0.0801, -0.0972,  ...,  0.3481,  0.3481,  0.3309]],\n",
+       " \n",
+       "         [[-0.1800, -0.1625, -0.1800,  ..., -0.2500, -0.2500, -0.2500],\n",
+       "          [-0.1800, -0.1975, -0.1800,  ..., -0.2850, -0.2675, -0.2850],\n",
+       "          [-0.1800, -0.1975, -0.1975,  ..., -0.2675, -0.2675, -0.2675],\n",
+       "          ...,\n",
+       "          [ 0.0301,  0.0301,  0.0126,  ...,  0.4328,  0.4328,  0.4153],\n",
+       "          [ 0.0126,  0.0301,  0.0301,  ...,  0.4328,  0.4503,  0.4328],\n",
+       "          [ 0.0126,  0.0301,  0.0126,  ...,  0.4503,  0.4503,  0.4328]],\n",
+       " \n",
+       "         [[ 0.0431,  0.0605,  0.0431,  ..., -0.0267, -0.0267, -0.0441],\n",
+       "          [ 0.0431,  0.0256,  0.0256,  ..., -0.0615, -0.0441, -0.0615],\n",
+       "          [ 0.0256,  0.0256,  0.0082,  ..., -0.0441, -0.0441, -0.0441],\n",
+       "          ...,\n",
+       "          [ 0.2348,  0.2348,  0.2173,  ...,  0.6008,  0.6008,  0.5834],\n",
+       "          [ 0.2173,  0.2348,  0.2348,  ...,  0.6008,  0.6182,  0.6008],\n",
+       "          [ 0.2173,  0.2348,  0.2348,  ...,  0.6182,  0.6182,  0.6008]]]),\n",
+       " 'mod': {'id': 589, 'str': 'biến khối lớn chính giữa phía trên thành nhỏ'}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainset.generate_random_query_target()"
    ]
   },
   {
@@ -281,18 +358,18 @@
     "    for t in tqdm(test_queries):\n",
     "        imgs += [testset.get_img(t[\"source_img_id\"])]\n",
     "        mods += [t[\"mod\"][\"str\"]]\n",
-    "#         if len(imgs) >= opt.batch_size or t is test_queries[-1]:\n",
-    "#             if \"torch\" not in str(type(imgs[0])):\n",
-    "#                 imgs = [torch.from_numpy(d).float() for d in imgs]\n",
-    "#             imgs = torch.stack(imgs).float()\n",
-    "#             imgs = torch.autograd.Variable(imgs).cuda()\n",
-    "#             mods = [t for t in mods]\n",
-    "#             f = model.compose_img_text(imgs, mods).data.cpu().numpy()\n",
-    "#             all_queries += [f]\n",
-    "#             imgs = []\n",
-    "#             mods = []\n",
-    "#     all_queries = np.concatenate(all_queries)\n",
-    "#     all_target_captions = [t[\"target_caption\"] for t in test_queries]"
+    "        if len(imgs) >= opt.batch_size or t is test_queries[-1]:\n",
+    "            if \"torch\" not in str(type(imgs[0])):\n",
+    "                imgs = [torch.from_numpy(d).float() for d in imgs]\n",
+    "            imgs = torch.stack(imgs).float()\n",
+    "            imgs = torch.autograd.Variable(imgs).cuda()\n",
+    "            mods = [t for t in mods]\n",
+    "            f = model.compose_img_text(imgs, mods).data.cpu().numpy()\n",
+    "            all_queries += [f]\n",
+    "            imgs = []\n",
+    "            mods = []\n",
+    "    all_queries = np.concatenate(all_queries)\n",
+    "    all_target_captions = [t[\"target_caption\"] for t in test_queries]"
    ]
   },
   {
