--- a/Retrieval-Playground-Copy1.ipynb
+++ b/Retrieval-Playground-Copy1.ipynb
@@ -15,12 +15,13 @@
     }
    ],
    "source": [
-    "!pip install opencv-python\n"
+    "!pip install opencv-python\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,70 +92,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'source_img_id': 174,\n",
-       " 'source_img_data': tensor([[[-0.2856, -0.2856, -0.2856,  ..., -0.3541, -0.3541, -0.3712],\n",
-       "          [-0.2856, -0.2856, -0.2856,  ..., -0.3883, -0.3712, -0.3883],\n",
-       "          [-0.2856, -0.3027, -0.3027,  ..., -0.3883, -0.3883, -0.3883],\n",
+       "{'source_img_id': 194,\n",
+       " 'source_img_data': tensor([[[-0.3027, -0.2856, -0.3027,  ..., -0.3712, -0.3712, -0.3712],\n",
+       "          [-0.3027, -0.3027, -0.3027,  ..., -0.4054, -0.3883, -0.4054],\n",
+       "          [-0.3198, -0.3198, -0.3027,  ..., -0.3883, -0.3883, -0.3883],\n",
        "          ...,\n",
-       "          [ 0.0569,  0.0569,  0.0569,  ...,  0.2796,  0.2796,  0.2796],\n",
-       "          [ 0.0569,  0.0569,  0.0741,  ...,  0.2796,  0.2967,  0.2796],\n",
-       "          [ 0.0569,  0.0741,  0.0569,  ...,  0.2967,  0.2967,  0.2796]],\n",
-       " \n",
-       "         [[-0.1625, -0.1625, -0.1625,  ..., -0.2500, -0.2325, -0.2500],\n",
-       "          [-0.1625, -0.1625, -0.1800,  ..., -0.2675, -0.2500, -0.2675],\n",
-       "          [-0.1800, -0.1800, -0.1800,  ..., -0.2675, -0.2675, -0.2675],\n",
-       "          ...,\n",
-       "          [ 0.1702,  0.1702,  0.1702,  ...,  0.3803,  0.3803,  0.3803],\n",
-       "          [ 0.1702,  0.1702,  0.1877,  ...,  0.3803,  0.3978,  0.3803],\n",
-       "          [ 0.1702,  0.1877,  0.1702,  ...,  0.3978,  0.3978,  0.3803]],\n",
-       " \n",
-       "         [[ 0.0605,  0.0605,  0.0605,  ..., -0.0267, -0.0092, -0.0267],\n",
-       "          [ 0.0605,  0.0431,  0.0431,  ..., -0.0441, -0.0267, -0.0441],\n",
-       "          [ 0.0431,  0.0431,  0.0256,  ..., -0.0441, -0.0441, -0.0441],\n",
-       "          ...,\n",
-       "          [ 0.3568,  0.3742,  0.3568,  ...,  0.5485,  0.5485,  0.5485],\n",
-       "          [ 0.3568,  0.3568,  0.3742,  ...,  0.5485,  0.5834,  0.5485],\n",
-       "          [ 0.3568,  0.3742,  0.3568,  ...,  0.5659,  0.5659,  0.5485]]]),\n",
-       " 'target_img_id': 2769,\n",
-       " 'target_img_data': tensor([[[-0.3027, -0.2856, -0.3027,  ..., -0.3712, -0.3712, -0.3712],\n",
-       "          [-0.3027, -0.3198, -0.3027,  ..., -0.4054, -0.3883, -0.4054],\n",
-       "          [-0.3027, -0.3027, -0.3198,  ..., -0.3883, -0.3883, -0.3883],\n",
-       "          ...,\n",
-       "          [-0.0801, -0.0972, -0.0972,  ...,  0.3309,  0.3309,  0.3309],\n",
-       "          [-0.0972, -0.0972, -0.0801,  ...,  0.3309,  0.3481,  0.3481],\n",
-       "          [-0.0972, -0.0801, -0.0972,  ...,  0.3481,  0.3481,  0.3309]],\n",
+       "          [-0.0972, -0.0972, -0.0972,  ...,  0.5022,  0.5022,  0.4851],\n",
+       "          [-0.0972, -0.0972, -0.0972,  ...,  0.5022,  0.5193,  0.5022],\n",
+       "          [-0.1143, -0.0972, -0.0972,  ...,  0.5193,  0.5193,  0.5022]],\n",
        " \n",
        "         [[-0.1800, -0.1625, -0.1800,  ..., -0.2500, -0.2500, -0.2500],\n",
-       "          [-0.1800, -0.1975, -0.1800,  ..., -0.2850, -0.2675, -0.2850],\n",
-       "          [-0.1800, -0.1975, -0.1975,  ..., -0.2675, -0.2675, -0.2675],\n",
+       "          [-0.1800, -0.1800, -0.1800,  ..., -0.2850, -0.2675, -0.2850],\n",
+       "          [-0.1975, -0.1975, -0.1975,  ..., -0.2675, -0.2675, -0.2675],\n",
        "          ...,\n",
-       "          [ 0.0301,  0.0301,  0.0126,  ...,  0.4328,  0.4328,  0.4153],\n",
-       "          [ 0.0126,  0.0301,  0.0301,  ...,  0.4328,  0.4503,  0.4328],\n",
-       "          [ 0.0126,  0.0301,  0.0126,  ...,  0.4503,  0.4503,  0.4328]],\n",
+       "          [ 0.0126,  0.0301,  0.0126,  ...,  0.5903,  0.5903,  0.5728],\n",
+       "          [ 0.0126,  0.0301,  0.0126,  ...,  0.6078,  0.6078,  0.6078],\n",
+       "          [ 0.0126,  0.0301,  0.0126,  ...,  0.6254,  0.6254,  0.5903]],\n",
        " \n",
        "         [[ 0.0431,  0.0605,  0.0431,  ..., -0.0267, -0.0267, -0.0441],\n",
        "          [ 0.0431,  0.0256,  0.0256,  ..., -0.0615, -0.0441, -0.0615],\n",
-       "          [ 0.0256,  0.0256,  0.0082,  ..., -0.0441, -0.0441, -0.0441],\n",
+       "          [ 0.0256,  0.0082,  0.0256,  ..., -0.0441, -0.0615, -0.0615],\n",
        "          ...,\n",
-       "          [ 0.2348,  0.2348,  0.2173,  ...,  0.6008,  0.6008,  0.5834],\n",
-       "          [ 0.2173,  0.2348,  0.2348,  ...,  0.6008,  0.6182,  0.6008],\n",
-       "          [ 0.2173,  0.2348,  0.2348,  ...,  0.6182,  0.6182,  0.6008]]]),\n",
-       " 'mod': {'id': 589, 'str': 'biến khối lớn chính giữa phía trên thành nhỏ'}}"
+       "          [ 0.2173,  0.2173,  0.2173,  ...,  0.7228,  0.7228,  0.7228],\n",
+       "          [ 0.2173,  0.2173,  0.2173,  ...,  0.7402,  0.7402,  0.7402],\n",
+       "          [ 0.2173,  0.2173,  0.2173,  ...,  0.7576,  0.7576,  0.7228]]]),\n",
+       " 'target_img_id': 16380,\n",
+       " 'target_img_data': tensor([[[-0.3027, -0.2684, -0.2856,  ..., -0.3712, -0.3541, -0.3712],\n",
+       "          [-0.2856, -0.3027, -0.2856,  ..., -0.3883, -0.3712, -0.3883],\n",
+       "          [-0.3027, -0.3027, -0.3027,  ..., -0.3883, -0.3883, -0.3883],\n",
+       "          ...,\n",
+       "          [-0.0458, -0.0458, -0.0629,  ...,  0.6221,  0.6049,  0.6049],\n",
+       "          [-0.0629, -0.0458, -0.0458,  ...,  0.6221,  0.6221,  0.6221],\n",
+       "          [-0.0629, -0.0458, -0.0629,  ...,  0.6221,  0.6221,  0.6049]],\n",
+       " \n",
+       "         [[-0.1800, -0.1450, -0.1625,  ..., -0.2500, -0.2325, -0.2500],\n",
+       "          [-0.1625, -0.1800, -0.1800,  ..., -0.2675, -0.2500, -0.2675],\n",
+       "          [-0.1800, -0.1800, -0.1800,  ..., -0.2675, -0.2675, -0.2675],\n",
+       "          ...,\n",
+       "          [ 0.0651,  0.0651,  0.0476,  ...,  0.7129,  0.7129,  0.6954],\n",
+       "          [ 0.0476,  0.0651,  0.0651,  ...,  0.7129,  0.7129,  0.7129],\n",
+       "          [ 0.0476,  0.0651,  0.0476,  ...,  0.7129,  0.7129,  0.6954]],\n",
+       " \n",
+       "         [[ 0.0431,  0.0605,  0.0431,  ..., -0.0267, -0.0092, -0.0267],\n",
+       "          [ 0.0431,  0.0431,  0.0431,  ..., -0.0615, -0.0267, -0.0441],\n",
+       "          [ 0.0256,  0.0431,  0.0256,  ..., -0.0441, -0.0441, -0.0441],\n",
+       "          ...,\n",
+       "          [ 0.2696,  0.2696,  0.2522,  ...,  0.8274,  0.8274,  0.8274],\n",
+       "          [ 0.2522,  0.2522,  0.2696,  ...,  0.8274,  0.8448,  0.8274],\n",
+       "          [ 0.2522,  0.2696,  0.2522,  ...,  0.8448,  0.8448,  0.8099]]]),\n",
+       " 'mod': {'id': 5126, 'str': 'xoá khối cầu màu xám nhỏ chính giữa phía trên'}}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trainset.generate_random_query_target()"
+    "img_path = \"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from torch_functions import UnNormalize\n",
+    "\n",
+    "image_folder = \"../data/CSSDataset/images/\"\n",
+    "image_path = os.path.join(image_folder  + os.listdir(image_folder)[0])\n",
+    "text = \"xóa khối cầu màu nâu\"\n",
+    "unorm = UnNormalize(mean=(0.485, 0.456, 0.406), std=(0.229, 0.224, 0.225))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../data/CSSDataset/images/css_train_012170.png'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "import torch \n",
+    "\n",
+    "img = np.einsum(\"ijk->kij\", np.array(Image.open(image_path).convert(\"RGB\")))\n",
+    "img = torch.from_numpy(img)\n",
+    "img = unorm(img).cuda().float()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval()\n",
+    "model.cuda()\n",
+    "rep = model.compose_img_text(torch.unsqueeze(img,0), [text])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 512])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rep.shape"
    ]
   },
   {
