--- a/Retrieval-Playground.ipynb
+++ b/Retrieval-Playground.ipynb
@@ -379,7 +379,7 @@
    "source": [
     "imgs = torch.unsqueeze(sample['source_img_data'],0).cuda()\n",
     "texts = sample['mod']['str']\n",
-    "model.compose_img_text(imgs, [texts])"
+    "model.compose_img_text(imgs, [texts])\n"
    ]
   },
   {
